--- a/src/app/file-explorer/file-explorer.component.scss
+++ b/src/app/file-explorer/file-explorer.component.scss
@@ -41,7 +41,7 @@
         th,
         td {
             overflow: hidden;
-            width: auto;
+            // width: auto;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
@@ -57,19 +57,36 @@
     margin-bottom: 0;
 }
 
-.mat-header-cell:first-child,
-.mat-cell:first-child {
-    flex: 5%;
-}
-
-th.mat-header-cell,
-td.mat-cell {
-  min-width: 100px;
-  max-width: 100px;
-}
 
 th.mat-header-cell:first-child,
-td.mat-cell:first-child{
-  min-width: 50px;
-  max-width: 50px;
+td.mat-cell:first-child {
+    min-width: 50px;
+    max-width: 50px;
+    width: 50px;
+}
+
+th.mat-header-cell:nth-child(2),
+td.mat-cell:nth-child(2) {
+    min-width: 150px;
+    max-width: 150px;
+}
+
+th.mat-header-cell:nth-child(3),
+td.mat-cell:nth-child(3) {
+    min-width: 75px;
+    max-width: 75px;
+}
+
+th.mat-header-cell:nth-child(4),
+td.mat-cell:nth-child(4) {
+    min-width: 75px;
+    max-width: 75px;
+}
+
+th.mat-header-cell:last-child,
+td.mat-cell:last-child {
+    text-overflow: unset !important;
+    min-width: 50px;
+    max-width: 50px;
+    width: 50px;
 }
