--- a/src/app/file-explorer/file-explorer.component.html
+++ b/src/app/file-explorer/file-explorer.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12">
       <ejs-splitter #horizontal width='100%'>
         <e-panes>
-          <e-pane size='25%'>
+          <e-pane size="25%" min="20%" max="50%">
             <ng-template #content>
               <!-- Folder tree -->
               <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
@@ -40,32 +40,31 @@
                 <div class="row">
                   <div class="col-lg-12">
                     <div class="table-container border">
-                      <table mat-table [dataSource]="tableDataSource" class="files-table">
+                      <table mat-table [dataSource]="tableDataSource" class="files-table" matSort>
 
                         <ng-container matColumnDef="select">
                           <th mat-header-cell *matHeaderCellDef>
                             <mat-checkbox (change)="$event ? masterToggle() : null"
-                                          [checked]="selection.hasValue() && isAllSelected()"
-                                          [indeterminate]="selection.hasValue() && !isAllSelected()">
+                              [checked]="selection.hasValue() && isAllSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllSelected()">
                             </mat-checkbox>
                           </th>
                           <td mat-cell *matCellDef="let row">
                             <mat-checkbox (click)="$event.stopPropagation()"
-                                          (change)="$event ? selection.toggle(row) : null"
-                                          [checked]="selection.isSelected(row)">
+                              (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
                             </mat-checkbox>
                           </td>
                         </ng-container>
 
                         <!-- Name Column -->
                         <ng-container matColumnDef="name">
-                          <th mat-header-cell *matHeaderCellDef> Name </th>
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
                           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                         </ng-container>
 
                         <!-- Weight Column -->
                         <ng-container matColumnDef="weight">
-                          <th mat-header-cell *matHeaderCellDef> Weight </th>
+                          <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
                           <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                         </ng-container>
 
@@ -73,6 +72,17 @@
                         <ng-container matColumnDef="symbol">
                           <th mat-header-cell *matHeaderCellDef> Symbol </th>
                           <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="action">
+                          <th mat-header-cell *matHeaderCellDef></th>
+                          <td mat-cell *matCellDef="let element">
+                            <button mat-icon-button>
+                              <mat-icon class="mat-icon-rtl-mirror">
+                                more_horiz
+                              </mat-icon>
+                            </button>
+                          </td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
