--- a/src/app/file-explorer/file-explorer.component.scss
+++ b/src/app/file-explorer/file-explorer.component.scss
@@ -44,6 +44,54 @@
             // width: auto;
             text-overflow: ellipsis;
             white-space: nowrap;
+
+            .file-icon {
+                vertical-align: bottom;
+            }
+        }
+
+
+        th.mat-header-cell:first-child,
+        td.mat-cell:first-child {
+            min-width: 50px;
+            max-width: 50px;
+            width: 50px;
+        }
+
+        th.mat-header-cell:nth-child(2),
+        td.mat-cell:nth-child(2) {
+            min-width: 150px;
+            max-width: 150px;
+        }
+
+        th.mat-header-cell:nth-child(3),
+        td.mat-cell:nth-child(3) {
+            min-width: 75px;
+            max-width: 75px;
+        }
+
+        th.mat-header-cell:nth-child(4),
+        td.mat-cell:nth-child(4) {
+            min-width: 75px;
+            max-width: 75px;
+        }
+
+        th.mat-header-cell:last-child,
+        td.mat-cell:last-child {
+            text-overflow: unset !important;
+            min-width: 50px;
+            max-width: 50px;
+            width: 50px;
+        }
+
+        .mat-header-row {
+            height: 48px;
+
+            .mat-header-cell {
+                background-color: #F8F8F8;
+                font-weight: bolder;
+                vertical-align: middle;
+            }
         }
     }
 }
@@ -55,38 +103,4 @@
 
 ::ng-deep .mat-checkbox .mat-checkbox-layout {
     margin-bottom: 0;
-}
-
-
-th.mat-header-cell:first-child,
-td.mat-cell:first-child {
-    min-width: 50px;
-    max-width: 50px;
-    width: 50px;
-}
-
-th.mat-header-cell:nth-child(2),
-td.mat-cell:nth-child(2) {
-    min-width: 150px;
-    max-width: 150px;
-}
-
-th.mat-header-cell:nth-child(3),
-td.mat-cell:nth-child(3) {
-    min-width: 75px;
-    max-width: 75px;
-}
-
-th.mat-header-cell:nth-child(4),
-td.mat-cell:nth-child(4) {
-    min-width: 75px;
-    max-width: 75px;
-}
-
-th.mat-header-cell:last-child,
-td.mat-cell:last-child {
-    text-overflow: unset !important;
-    min-width: 50px;
-    max-width: 50px;
-    width: 50px;
 }
