--- a/src/app/file-explorer/file-explorer.component.html
+++ b/src/app/file-explorer/file-explorer.component.html
@@ -38,13 +38,14 @@
 
                   <ng-container matColumnDef="select">
                     <th mat-header-cell *matHeaderCellDef>
-                      <mat-checkbox (change)="$event ? masterToggle() : null"
+                      <mat-checkbox (change)="$event ? masterToggle() : null; changeHeader()"
                         [checked]="selection.hasValue() && isAllSelected()"
                         [indeterminate]="selection.hasValue() && !isAllSelected()">
                       </mat-checkbox>
                     </th>
                     <td mat-cell *matCellDef="let row">
-                      <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                      <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null; changeHeader()"
                         [checked]="selection.isSelected(row)">
                       </mat-checkbox>
                     </td>
@@ -55,7 +56,8 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
                     <td mat-cell *matCellDef="let element">
                       <a href="">
-                        <mat-icon class="file-icon">folder_open</mat-icon>{{element.name}}
+                        <span class="iconify" data-icon="vscode-icons:file-type-word" data-inline="false"></span>
+                        {{element.name}}
                       </a>
                     </td>
                   </ng-container>
@@ -99,8 +101,37 @@
                       </button>
                     </ng-template>
                   </mat-menu>
+
+                  <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef colspan="4">
+                      <button mat-button>
+                        <mat-icon>
+                          delete
+                        </mat-icon>
+                        Delete All
+                      </button>
+                      <button mat-button>
+                        <mat-icon>
+                          download
+                        </mat-icon>
+                        Download
+                      </button>
+                    </th>
+                  </ng-container>
+                  <!-- <ng-container matColumnDef="fill_1">
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                  </ng-container>
+                  <ng-container matColumnDef="fill_2">
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                  </ng-container>
+                  <ng-container matColumnDef="fill_3">
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                  </ng-container> -->
                   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  <tr mat-row *matRowDef="let row; columns: mainColumns;"></tr>
                 </table>
               </div>
             </div>
