--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';/* You can add global styles to this file, and also import other style files */
 /* @import '@angular/material/prebuilt-themes/purple-green.css'; */
 @import "../node_modules/@syncfusion/ej2/material.css";
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
