--- a/src/app/file-explorer/file-explorer.component.html
+++ b/src/app/file-explorer/file-explorer.component.html
@@ -1,33 +1,8 @@
-<div>
-  <div class="row">
-    <div class="col-3">
-      <button mat-button class="menu-new" [matMenuTriggerFor]="menu">
-        New 
-        <span class="iconify" data-icon="eva:arrow-down-fill" data-inline="false"></span>
-      </button>
-      <mat-menu #menu="matMenu">
-        <button mat-menu-item class="item-menu" (click)="openAddOrEditDialog()">
-          <span class="iconify" data-icon="mdi:folder-plus-outline" data-inline="false"></span>
-          Create Sub Folder
-        </button>
-        <button mat-menu-item  class="item-menu">
-          <span class="iconify" data-icon="mdi:file-upload-outline" data-inline="false"></span>
-          Upload Files
-        </button>
-      </mat-menu>
-    </div>
-    <div class="col-4" style="height: 38px;">
-      <div class="input-icons"> 
-        <span class="iconify icon" data-icon="akar-icons:search" data-inline="false"></span>
-        <input class="input-field" type="text"> 
-    </div> 
-    </div>
-    <div class="col-5"></div>
-  </div>
+<div class="file-explorer-container">
   <ejs-splitter #horizontal width='100%'>
   <e-panes>
     <e-pane size="25%" min="20%" max="50%">
-      <ng-template #content>
+      <ng-template #content>      
         <!-- Folder tree -->
         <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
           <!-- This is the tree node template for leaf nodes -->
@@ -56,7 +31,40 @@
     </e-pane>
     <e-pane size='75%'>
       <ng-template #content>
-        <div class="container">
+        <div class="container-fluid right-file-explorer-container">
+          <div class="row action-file-explorer">
+            <div class="inline" style="height: 40px;">
+              <button mat-button class="menu-new" [matMenuTriggerFor]="menuNew">
+                New 
+                <span class="iconify" data-icon="eva:arrow-down-fill" data-inline="false"></span>
+              </button>
+              <mat-menu #menuNew="matMenu">
+                <button mat-menu-item class="item-menu" (click)="openAddOrEditDialog('create', 'true', 'New Sub Folder')">
+                  <span class="iconify" data-icon="mdi:folder-plus-outline" data-inline="false"></span>
+                  Create Sub Folder
+                </button>
+                <button mat-menu-item  class="item-menu">
+                  <span class="iconify" data-icon="mdi:file-upload-outline" data-inline="false"></span>
+                  Upload Files
+                </button>
+              </mat-menu>
+            </div>
+            <div class="inline filter">
+              <div class="input-icons"> 
+                <span class="iconify icon" data-icon="akar-icons:search" data-inline="false"></span>
+                <input class="input-field" type="text" (keyup)="applyFilter($event)" placeholder="Search keyword" #input> 
+            </div> 
+            </div>
+            <div class="inline filter">
+              <mat-form-field appearance="outline" class="sort-document">
+                <mat-select placeholder="Favorite food" disableOptionCentering [(value)]="selectedFood" (selectionChange)="selectSort($event)">
+                  <mat-option *ngFor="let food of foods" [value]="food.value">
+                    {{food.viewValue}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
           <div class="row">
             <div class="col-lg-12">
               <div class="table-container border">
@@ -94,10 +102,9 @@
                     <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                   </ng-container>
 
-                  <!-- Symbol Column -->
-                  <ng-container matColumnDef="symbol">
-                    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                  <ng-container matColumnDef="modified">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Last Modifield </th>
+                    <td mat-cell *matCellDef="let element"> {{element.modified | date: 'dd MMM, yyyy, HH:mm'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef="action">
@@ -113,7 +120,7 @@
 
                   <mat-menu #menu="matMenu">
                     <ng-template matMenuContent let-item="element">
-                      <button mat-menu-item>
+                      <button mat-menu-item (click)="openAddOrEditDialog('create', 'true', 'New Sub Folder')">
                         <mat-icon>edit</mat-icon>
                         <span>Edit</span>
                       </button>
