--- a/src/app/file-explorer/file-explorer.component.scss
+++ b/src/app/file-explorer/file-explorer.component.scss
@@ -146,12 +146,11 @@
 
 .input-icons .iconify { 
     position: absolute; 
-    height: 100%;
+    height: 38px;
 } 
   
 .input-icons { 
     width: 100%; 
-    margin-bottom: 10px; 
 } 
   
 .icon { 
@@ -169,3 +168,64 @@
     box-sizing: border-box;
     border-radius: 5px;
 } 
+
+.inline {
+    margin-left: 15px;
+    height: 38px;
+}
+
+.filter {
+    margin-top: 1px;
+}
+
+::ng-deep .mat-select-panel {
+    position: absolute;
+    top: 40px;
+    left: 4px;
+    min-width: calc(100% + 22px) !important;
+    border-top-style: none;
+    background: #FFFFFF;
+    border: 0.5px solid #E3E3E3;
+    box-sizing: border-box;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 5px !important;
+}
+
+::ng-deep .mat-form-field.sort-document {
+    .mat-form-field-wrapper {
+        margin: 0;
+        padding: 0;
+        height: 38px;
+        .mat-form-field-flex {
+            height: 100%;
+            .mat-form-field-outline {
+                height: 100%;
+            }
+            .mat-form-field-infix {
+                border-top-width: 0px;
+                padding: 15px 0px;
+                .mat-select {
+                    .mat-select-trigger {
+                        .mat-select-trigger {
+
+                        }
+                        .mat-select-arrow-wrapper {
+                            transform: translateY(0%);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.file-explorer-container {
+    margin-top: 50px;
+}
+
+.right-file-explorer-container {
+    padding: 30px;
+    .action-file-explorer {
+        margin-bottom: 30px;
+    }
+}
